--- a/app/src/main/res/layout/home_card_menu.xml
+++ b/app/src/main/res/layout/home_card_menu.xml
@@ -65,7 +65,7 @@
             android:id="@+id/icFavorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_heart_rounded"
+            app:srcCompat="@drawable/ic_heart"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
