--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,7 @@
 
     <activity
         android:id="@+id/searchListActivity"
-        android:name="com.bit2b.gear.SearchListActivity"
+        android:name="com.bit2b.gear.ui.search.SearchListActivity"
         android:label="SearchListActivity"
         tools:layout="@layout/activity_search_list"
         />
