--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="color_1a202c">#1A202C</color>
     <color name="color_e1e1e1">#E1E1E1</color>
     <color name="color_909090">#909090</color>
+    <color name="color_6B7280">#6B7280</color>
+
 </resources>
