--- a/app/src/main/res/drawable/switch_button_selected.xml
+++ b/app/src/main/res/drawable/switch_button_selected.xml
@@ -3,8 +3,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#000000"/> <!-- Fundo preto -->
+            <solid android:color="#000000"/>
         </shape>
     </item>
-    <item android:drawable="@drawable/ic_white_text"/>
+    <item android:drawable="@drawable/ic_notification_text"/>
 </layer-list>
