--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/backButton"
@@ -11,73 +12,67 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_color_f6f6f7_round"
         android:padding="12dp"
-        android:layout_marginStart="20dp"
-        app:srcCompat="@drawable/ic_chevron_left"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_chevron_left" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/titleSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:text="Pesquisar"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="@+id/backButton"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/backButton"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Resultado Pesquisa"
-        tools:text="Resultado Pesquisa"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/backButton"
+        tools:text="Pesquisar" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/filterText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/color_b70000"
         android:paddingStart="4dp"
+        android:text="Limpar"
+        android:textColor="@color/color_b70000"
         android:textSize="15sp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="@+id/backButton"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Limpar"
-        tools:text="Limpar"
-        />
+        app:layout_constraintTop_toTopOf="@+id/backButton"
+        tools:text="Limpar" />
 
     <RadioGroup
-        android:checkedButton="@+id/offer"
         android:id="@+id/toggle"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/pink_out_line"
+        android:checkedButton="@+id/offer"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/titleSearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/titleSearch">
 
         <RadioButton
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="1dp"
             android:id="@+id/search"
-            android:background="@drawable/toggle_widget_background"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
             android:layout_weight="1"
+            android:background="@drawable/toggle_widget_background"
             android:button="@null"
             android:gravity="center"
             android:text="Carro"
-            android:textStyle="bold"
-            android:textColor="@color/color_6B7280" />
+            android:textColor="@color/color_6B7280"
+            android:textStyle="bold" />
 
         <RadioButton
             android:id="@+id/offer"
@@ -88,9 +83,32 @@
             android:button="@null"
             android:gravity="center"
             android:text="Moto"
-            android:textStyle="bold"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </RadioGroup>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggle"
+        app:layout_constraintBottom_toTopOf="@+id/btnApplyFilter"
+        tools:listitem="@layout/item_search_list"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnApplyFilter"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Aplicar Filtro (%s)"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@drawable/bg_color_black_corner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
